@@ -8,8 +8,8 @@
 	//Start session
 	session_start();
   if (isset($_SESSION['LAST_ACTIVITY']) && 
-          (time() - $_SESSION['LAST_ACTIVITY'] > 1800)) { // 30 min
-    // last request was more than 30 minutes ago
+          (time() - $_SESSION['LAST_ACTIVITY'] > 86400)) { // 1 day
+    // last request was more than one day ago
     session_unset();     // unset $_SESSION variable for the run-time 
     session_destroy();   // destroy session data in storage
   }
