@@ -85,6 +85,14 @@ function makeMenuItems(e) {
         reset: {
           name: 'Cancel Move',
           callback: function(){
+            if (BD18.deletedBoardToken) {
+              BD18.curTrayNumb = BD18.deletedBoardToken.snumb;
+              BD18.curIndex = BD18.deletedBoardToken.index;
+              BD18.curFlip = BD18.deletedBoardToken.flip;
+              BD18.curMapX = BD18.deletedBoardToken.bx;
+              BD18.curMapY = BD18.deletedBoardToken.by;
+              addToken();
+            }
             trayCanvasApp();
             mainCanvasApp();
             toknCanvasApp();
