@@ -36,6 +36,8 @@
             Issue Tracker</a></li>
         <li><a href="http://forum.board18.org/">
             Forums</a></li>
+        <li><a href="http://demo1.board18.org/">
+            Demo</a></li>
       </ul>
     </div>
 
